poly-bench-grammar/test/corpus/charting.txt
================================================================================
Simple after block with speedup chart
================================================================================

use std::charting

suite test {
    bench foo {
        go: run()
    }

    after {
        charting.drawSpeedupChart(
            title: "Performance"
        )
    }
}

--------------------------------------------------------------------------------

(source_file
  (use_statement
    module: (identifier))
  (suite
    name: (identifier)
    (suite_body
      (benchmark
        name: (identifier)
        (benchmark_body
          (language_implementation
            language: (language_tag)
            (inline_code))))
      (after_block
        (after_body
          (chart_directive
            function: (chart_function_name)
            (chart_params
              (chart_param
                name: (chart_param_name)
                value: (string
                  (string_content))))))))))

================================================================================
Multiple chart directives
================================================================================

use std::charting

suite test {
    bench foo {
        go: run()
    }

    after {
        charting.drawSpeedupChart(
            title: "Speedup Chart",
            output: "speedup.svg"
        )

        charting.drawTable(
            title: "Table",
            sortBy: "name"
        )
    }
}

--------------------------------------------------------------------------------

(source_file
  (use_statement
    module: (identifier))
  (suite
    name: (identifier)
    (suite_body
      (benchmark
        name: (identifier)
        (benchmark_body
          (language_implementation
            language: (language_tag)
            (inline_code))))
      (after_block
        (after_body
          (chart_directive
            function: (chart_function_name)
            (chart_params
              (chart_param
                name: (chart_param_name)
                value: (string
                  (string_content)))
              (chart_param
                name: (chart_param_name)
                value: (string
                  (string_content)))))
          (chart_directive
            function: (chart_function_name)
            (chart_params
              (chart_param
                name: (chart_param_name)
                value: (string
                  (string_content)))
              (chart_param
                name: (chart_param_name)
                value: (string
                  (string_content))))))))))

================================================================================
Chart with all parameter types
================================================================================

use std::charting

suite test {
    bench foo {
        go: run()
    }

    after {
        charting.drawSpeedupChart(
            title: "Full Example",
            width: 800,
            height: 600,
            minSpeedup: 1.5,
            includeBenchmarks: ["foo", "bar"],
            sortBy: "speedup"
        )
    }
}

--------------------------------------------------------------------------------

(source_file
  (use_statement
    module: (identifier))
  (suite
    name: (identifier)
    (suite_body
      (benchmark
        name: (identifier)
        (benchmark_body
          (language_implementation
            language: (language_tag)
            (inline_code))))
      (after_block
        (after_body
          (chart_directive
            function: (chart_function_name)
            (chart_params
              (chart_param
                name: (chart_param_name)
                value: (string
                  (string_content)))
              (chart_param
                name: (chart_param_name)
                value: (number))
              (chart_param
                name: (chart_param_name)
                value: (number))
              (chart_param
                name: (chart_param_name)
                value: (float))
              (chart_param
                name: (chart_param_name)
                value: (string_array
                  (string
                    (string_content))
                  (string
                    (string_content))))
              (chart_param
                name: (chart_param_name)
                value: (string
                  (string_content))))))))))

================================================================================
Chart with rowCount parameter
================================================================================

use std::charting

suite test {
    bench foo {
        go: run()
    }

    after {
        charting.drawSpeedupChart(
            title: "Row Count Example",
            rowCount: 4
        )
    }
}

--------------------------------------------------------------------------------

(source_file
  (use_statement
    module: (identifier))
  (suite
    name: (identifier)
    (suite_body
      (benchmark
        name: (identifier)
        (benchmark_body
          (language_implementation
            language: (language_tag)
            (inline_code))))
      (after_block
        (after_body
          (chart_directive
            function: (chart_function_name)
            (chart_params
              (chart_param
                name: (chart_param_name)
                value: (string
                  (string_content)))
              (chart_param
                name: (chart_param_name)
                value: (number)))))))))
